0030990: Foundation Classes - unexpected change in numerical results on bsplines after 0029769

Added DRAW command and test case for detection of inconsistent update of B-Spline surface cache